[gd_scene load_steps=4 format=3 uid="uid://cau3a0khxe8g5"]

[ext_resource type="Script" uid="uid://cfa2xv4bye68u" path="res://Scripts/pouring.gd" id="1_60yfl"]
[ext_resource type="Script" uid="uid://emaitiducose" path="res://Scripts/chain.gd" id="2_o538a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4s63"]
size = Vector2(42.5, 47.5)

[node name="Pouring" type="Node2D"]
script = ExtResource("1_60yfl")

[node name="Chain" type="Sprite2D" parent="."]
position = Vector2(878, 322)
script = ExtResource("2_o538a")
maximum_height = 100.0

[node name="PullArea" type="Area2D" parent="Chain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chain/PullArea"]
position = Vector2(0, 108)
shape = SubResource("RectangleShape2D_e4s63")

[node name="ColorRect" type="ColorRect" parent="Chain"]
offset_left = -5.0
offset_top = -115.0
offset_right = 5.0
offset_bottom = 116.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Rating_label" type="Label" parent="."]
offset_left = 42.0
offset_top = 415.0
offset_right = 185.0
offset_bottom = 552.0
theme_override_font_sizes/font_size = 60
text = "0%"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 304.0
offset_top = 38.0
offset_right = 568.0
offset_bottom = 313.0
max_value = 1.0
value = 1.0
fill_mode = 3
show_percentage = false

[connection signal="pulling" from="Chain" to="." method="_on_chain_pulling"]
[connection signal="pulling_ended" from="Chain" to="." method="_on_chain_pulling_ended"]
[connection signal="input_event" from="Chain/PullArea" to="Chain" method="_on_pull_area_input_event"]
